# code-reviewer-agent

./: .env.example  .gitignore  .spacesignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.hf  LICENSE  QUICKSTART_HF.md  README.md  README_HF.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_e2e_tests.sh  start.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: format_review.py
.github/workflows/: code-review.yml  deploy-huggingface.yml
app/: __init__.py  api.py  config.py  guardrails.py  schemas.py  serve.py  utils.py
app/crew/: __init__.py  agents.yaml  crew.py  tasks.yaml
scripts/: setup_hf_deployment.sh  verify_deployment.py
tests/: __init__.py  create_test_request.py  sample_request.json  test_e2e.py
tests/fixtures/: sample_security_issue.diff  test_diffs.py
